
* Fixed a problem with fvwm not accepting keyboard input when the
  application with the focus vanished at the start of a session.

* A small security patch regarding TMPDIR.

* Fixed a problem with colormap transition when a transient window
  died.

* Fixed calculation of average bg colour in colour sets with large
  pictures.

* Fixed some minor problems regarding the multibyte patch

Changes in stable release 2.4.7 (11-Apr-2002)

* Fixed parsing of WindowList with conditions and a position at
  the same time that was broken in 2.4.6.

* Fixed some problems with the DeskOnly option of FvwmTaskBar
  (windows were duplicated when moving to a different Desk; the
  StickyIcon style was ignored).

* Fixed config.h warnings with some compilers introduced in 2.4.6.

* Fixed icon titles being raised when they should not be.

* Fixed initial drawing of the internals of the FvwmPager window.

* Fixed the FvwmAudio compatible mode in FvwmEvent when external
  audio player is used.

* Fixed execution on QNX.

Changes in stable release 2.4.6 (10-Mar-2002)

* Better support of non ISO-8859-1 window and icon titles. See the
  --disable-compound-text option in INSTALL.fvwm for more details.

* Improved speed of opaque window movement/resizing.

* Fixed a bug that caused windows not being raised and lowered
  properly.

* Suppress error message when using XBM icons.

* Fixed a read descriptor problem in FvwmTaskBar

* Fixed a minor colour update bug in the pager.

* Fixed an fvwm crash when a module died at the wrong moment;
  specifically a transient FvwmPager of FvwmIconMan.

* Fixed placement of WindowList on wrong Xinerama screen when
  called without any options on a screen other than the primary
  screen.

* Fixed a problem with root bindings and xfishtank.

* Fixed moving windows with the keyboard over the edge of the
  screen when the pointer remained of the previous page.

* Do not hilight windows after ResizeMove.

* New conditional command ThisWindow.
