@@ -272,19 +272,28 @@ void EvtMouseList(struct XObj *xobj, XButtonEvent *EvtButton)
   pt.x = EvtButton->x-xobj->x;
   pt.y = EvtButton->y-xobj->y;
 
+  XTextExtents(xobj->xfont, "lp", strlen("lp"), &dir, &asc, &desc, &struc);
+  HeightCell = asc + desc + 3;
+  NbVisCell = (xobj->height-6-BdWidth)/HeightCell;
+  NbCell = CountOption(xobj->title);
+
   /* Clic dans une cellule */
   rect.x = 4 + BdWidth;
   rect.y = rect.x;
   rect.width = xobj->width - rect.x - 10 - 2*BdWidth - SbWidth;
   rect.height = xobj->height -rect.y - 4 - 2*BdWidth;
+
   if(PtInRect(pt,rect))
   {
     /* Determination de la cellule */
     pt.y = pt.y - rect.y;
-    XTextExtents(xobj->xfont, "lp", strlen("lp"), &dir, &asc, &desc, &struc);
     NPosCell = xobj->value2 + (pt.y/(asc+desc+3));
     if (NPosCell > CountOption(xobj->title))
       NPosCell = 0;
+    else if (NPosCell >= xobj->value2 + NbVisCell)
+    {
+      NPosCell--;
+    }
     if (NPosCell != xobj->value)
     {
       xobj->value = NPosCell;
@@ -293,11 +302,6 @@ void EvtMouseList(struct XObj *xobj, XButtonEvent *EvtButton)
     SendMsg(xobj, SingleClic);
     return ;
   }
-
-  XTextExtents(xobj->xfont, "lp", strlen("lp"), &dir, &asc, &desc, &struc);
-  HeightCell = asc + desc + 3;
-  NbVisCell = (xobj->height-6-BdWidth)/HeightCell;
-  NbCell = CountOption(xobj->title);
 
   /* Clic fleche haute asc vertical */
   rect.y = 5 + BdWidth;
@@ -519,6 +523,10 @@ void EvtKeyList(struct XObj *xobj, XKeyEvent *EvtKey)
       NPosCell = xobj->value2 + (pt.y/(asc+desc+3));
       if (NPosCell > CountOption(xobj->title))
 	NPosCell = 0;
+      else if (NPosCell >= xobj->value2 + NbVisCell)
+      {
+	NPosCell--;
+      }
       if (NPosCell != xobj->value)
       {
 	xobj->value = NPosCell;
