@@ -1,3 +1,9 @@
+2002-06-02  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmScript/Widgets/List.c (EvtMouseList):
+	(EvtKeyList):
+	Fixed selection
+
 2002-05-31  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmIconMan/xmanager.h:
