@@ -39,6 +39,8 @@ Changes in stable release 2.4.8 (not released yet)
 
 * Fixed some minor problems regarding the multibyte patch
 
+* Fixed selection in FvwmScript List widget
+
 Changes in stable release 2.4.7 (11-Apr-2002)
 
 * Fixed parsing of WindowList with conditions and a position at
